# RunFleanceRun

./: .gitignore  CMakeLists.txt
.github/workflows/: build-linux.yml  build-mac.yml  cmake-linu.yml
cmake/: FileEmbed.cmake
src/: Sprite.c  Sprite.h  main.c
src/libs/: SDL_stbimage.h  stb_image.h  stb_image_resize.h  stbttf.c  stbttf.h
